--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -44,13 +44,19 @@ body {
 
 img.responsive {
   width: 100%;
-  height: auto; }
+  height: auto;
+  display: block; }
 
 .u-vpadding {
-  padding: 15rem 0; }
+  padding: 17rem 0; }
   @media only screen and (max-width: 56.25em) {
     .u-vpadding {
-      padding: 7rem 0; } }
+      padding: 10rem 0; } }
+  .u-vpadding--small {
+    padding: 10rem; }
+    @media only screen and (max-width: 56.25em) {
+      .u-vpadding--small {
+        padding: 7rem; } }
 
 .color-section--primary {
   background-color: #455aa4; }
@@ -86,23 +92,20 @@ img.responsive {
 .u-text-center {
   text-align: center; }
 
+::-moz-selection {
+  color: #fff;
+  background: #455aa4; }
+
+::selection {
+  color: #fff;
+  background: #455aa4; }
+
 .heading-primary {
   font-size: 6rem;
   font-weight: 900;
   text-transform: uppercase;
   letter-spacing: .2rem;
-  line-height: 1.2;
-  padding-bottom: 1rem; }
-  .heading-primary--main {
-    color: #7bbce8;
-    padding-bottom: 3rem; }
-    .heading-primary--main span::before {
-      color: #ed7d26;
-      text-transform: none;
-      content: "${\`"; }
-    .heading-primary--main span::after {
-      color: #ed7d26;
-      content: "\`}"; }
+  line-height: 1.2; }
   @media only screen and (max-width: 82.8125em) {
     .heading-primary {
       font-size: 5rem; } }
@@ -113,6 +116,21 @@ img.responsive {
     .heading-primary {
       letter-spacing: 0;
       font-size: 3.5rem; } }
+  .heading-primary--main {
+    color: #7bbce8;
+    padding-bottom: 3rem; }
+    .heading-primary--main span::before {
+      color: #ed7d26;
+      text-transform: none;
+      content: "${\`"; }
+    .heading-primary--main span::after {
+      color: #ed7d26;
+      content: "\`}"; }
+  .heading-primary--blog {
+    color: inherit; }
+    @media only screen and (max-width: 37.5em) {
+      .heading-primary--blog {
+        font-size: 2.5rem; } }
 
 .span {
   text-transform: uppercase;
@@ -133,7 +151,8 @@ img.responsive {
   text-transform: uppercase;
   letter-spacing: .2rem;
   line-height: 1.2;
-  padding-bottom: 2rem; }
+  padding-bottom: 2rem;
+  transition: all .2s ease-in-out; }
   @media only screen and (max-width: 82.8125em) {
     .heading-secondary {
       letter-spacing: .1rem;
@@ -146,6 +165,8 @@ img.responsive {
   @media only screen and (max-width: 37.5em) {
     .heading-secondary {
       font-size: 2rem; } }
+  .heading-secondary:hover {
+    transform: translateX(-0.5rem) skewX(-30deg); }
 
 .heading-tertiary {
   font-size: 1.8rem;
@@ -159,7 +180,16 @@ img.responsive {
   font-size: 1.8rem;
   font-weight: 300; }
   .paragraph--large {
-    font-size: 2.5rem; }
+    font-size: 2.4rem; }
+    @media only screen and (max-width: 82.8125em) {
+      .paragraph--large {
+        font-size: 2.3rem; } }
+    @media only screen and (max-width: 56.25em) {
+      .paragraph--large {
+        font-size: 2rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .paragraph--large {
+        font-size: 1.8rem; } }
 
 /*
 ** COLORS
@@ -444,9 +474,19 @@ img.responsive {
     .search {
       justify-content: flex-end; } }
   .search__before {
-    order: 1; }
+    order: 1;
+    user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none; }
   .search__after {
-    order: 3; }
+    order: 3;
+    user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none; }
   .search__input {
     order: 2;
     width: 1.3rem;
@@ -1024,18 +1064,18 @@ img.responsive {
   .list__item {
     margin-bottom: 1rem; }
   .list__title {
-    margin-left: 3rem;
+    margin-left: 2rem;
     position: relative; }
     .list__title::before {
       content: "";
       position: absolute;
       top: 50%;
-      left: -3rem;
-      width: 1rem;
-      height: 1rem;
+      left: -2rem;
+      width: .5rem;
+      height: .5rem;
       transform: translateY(-50%);
       border-radius: 50%;
-      border: 0.5rem solid #455aa4; }
+      border: 0.25rem solid #455aa4; }
     .list__title:not(:last-child) {
       margin-bottom: 1rem; }
   .list__container {
@@ -1132,6 +1172,140 @@ img.responsive {
   -moz-box-shadow: 0px 0.5rem 1rem 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 0.5rem 1rem 0px rgba(0, 0, 0, 0.2); }
 
+.switch {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: relative;
+  border-radius: .4rem;
+  overflow: hidden; }
+  .switch--blog {
+    width: 20rem;
+    color: #5a5a5a;
+    font-size: 1.6rem; }
+    @media only screen and (max-width: 35em) {
+      .switch--blog {
+        width: 16rem;
+        font-size: 1.3rem; } }
+  .switch__text {
+    flex: 1 1 0px;
+    white-space: nowrap;
+    padding: 1rem;
+    text-align: center;
+    font-weight: 300;
+    z-index: 20;
+    cursor: pointer;
+    transition: all .2s ease-in-out; }
+    .switch__text--left {
+      color: #fff; }
+  .switch__background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background-color: #455aa4;
+    z-index: 10;
+    transition: all .2s ease-in-out; }
+  .switch.active .switch__text--left {
+    color: inherit; }
+  .switch.active .switch__text--right {
+    color: #fff; }
+  .switch.active .switch__background {
+    left: 50%;
+    background-color: #7bbce8; }
+
+.post-item {
+  background-color: #fafafa;
+  color: #5a5a5a;
+  padding: 2rem; }
+  .post-item > *:not(:last-child) {
+    margin-bottom: 1rem; }
+  .post-item__img {
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+    overflow: hidden;
+    position: relative; }
+    .post-item__img img {
+      display: block;
+      height: auto;
+      width: 100%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
+  .post-item__heading {
+    font-weight: 400;
+    font-size: 2rem;
+    color: inherit; }
+  .post-item__data {
+    font-size: 1.3rem;
+    color: inherit; }
+  .post-item__author {
+    display: inline-block; }
+    .post-item__author::after {
+      content: " \00b7 "; }
+  .post-item__date {
+    display: inline-block; }
+  .post-item__description {
+    font-size: 1.6rem;
+    font-weight: 300;
+    color: #3c3c3c; }
+  .post-item__btn, .post-item__btn:visited, .post-item__btn:active, .post-item__btn:focus {
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: all .2s ease-in-out;
+    color: #455aa4;
+    font-weight: bold; }
+  .post-item__btn span {
+    transition: all .2s ease-in-out; }
+  .post-item__btn:hover {
+    color: #7bbce8; }
+    .post-item__btn:hover span {
+      margin-left: 1rem;
+      color: #7bbce8; }
+
+.visited-item {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch; }
+  .visited-item__thumb {
+    flex: 0 0 8rem;
+    height: 8rem;
+    overflow: hidden;
+    position: relative; }
+    .visited-item__thumb img {
+      display: block;
+      height: 100%;
+      width: auto;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
+  .visited-item__content {
+    margin-left: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+    .visited-item__content > *:not(:last-child) {
+      margin-bottom: 1rem; }
+  .visited-item__link, .visited-item__link:visited, .visited-item__link:active, .visited-item__link:focus {
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 1.6rem;
+    color: #5a5a5a;
+    transition: all .2s ease-in-out; }
+  .visited-item__link:hover {
+    color: #7bbce8; }
+  .visited-item__date {
+    font-size: 1.2rem;
+    color: #5a5a5a;
+    font-weight: 300; }
+
 .row {
   width: 100%;
   max-width: 140rem;
@@ -1146,9 +1320,6 @@ img.responsive {
   @media only screen and (max-width: 56.25em) {
     .row--respond {
       max-width: 60rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .row--respond {
-      max-width: 100%; } }
 
 .grid {
   display: grid;
@@ -1192,37 +1363,6 @@ img.responsive {
   .grid--borders {
     grid-gap: 0;
     row-gap: 0; }
-    .grid--borders > * {
-      padding: 2.5rem;
-      border-right: 0.2rem solid #f0f0f0;
-      border-bottom: 0.2rem solid #f0f0f0;
-      position: relative; }
-      @media only screen and (max-width: 56.25em) {
-        .grid--borders > * {
-          border: none; } }
-      .grid--borders > *:hover {
-        border-color: transparent; }
-        .grid--borders > *:hover::after {
-          outline-width: 1rem; }
-      .grid--borders > *::after {
-        content: "";
-        z-index: 100;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        outline-width: 0rem;
-        outline-style: solid;
-        outline-color: #7bbce8;
-        transition: all .2s; }
-    .grid--borders__text p.paragraph {
-      color: inherit; }
-    .grid--borders__text {
-      color: #5a5a5a;
-      transition: all .2s; }
-      .grid--borders__text:hover {
-        color: #3c3c3c; }
     .grid--borders--3 > *:nth-child(3n) {
       border-right: none; }
     .grid--borders--3 > *:nth-last-child(-n + 3) {
@@ -1278,6 +1418,9 @@ img.responsive {
     font-weight: 300;
     letter-spacing: .3rem;
     text-transform: uppercase; }
+    @media only screen and (max-width: 37.5em) {
+      .footer__title {
+        margin-bottom: 3rem; } }
   .footer__icon-box {
     display: flex;
     flex-direction: row;
@@ -1309,17 +1452,22 @@ img.responsive {
     display: flex;
     flex-direction: row;
     align-items: stretch;
-    width: 100%; }
-  .footer__input {
-    outline-color: #7bbce8;
-    font-size: 1.8rem;
-    border: 0;
-    margin: 0;
-    flex: 1; }
-  .footer__submit {
+    width: 100%;
     font-family: inherit;
     font-weight: 400;
-    font-size: 1.8rem;
+    font-size: 1.8rem; }
+    .footer__newsletter > * {
+      font-family: inherit;
+      font-size: inherit;
+      font-weight: inherit; }
+  .footer__input[type=email] {
+    outline-color: #7bbce8;
+    border: 0;
+    margin: 0;
+    padding: .5rem 1rem;
+    flex: 1;
+    min-width: 1px; }
+  .footer__submit {
     text-transform: uppercase;
     margin: 0;
     padding: .5rem 1rem;
@@ -1328,6 +1476,139 @@ img.responsive {
     outline-color: currentColor;
     background-color: #ed7d26;
     border: 0; }
+
+.header-blog {
+  background-repeat: repeat;
+  background-size: 80rem;
+  background-color: #fafafa;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 20rem;
+  padding: 0 5rem; }
+  @media only screen and (max-width: 56.25em) {
+    .header-blog {
+      padding: 0 1.5rem; } }
+  .header-blog__profile {
+    width: 12rem;
+    border-radius: 50%;
+    border-width: .5rem;
+    border-style: solid;
+    border-top-color: #fafafa;
+    border-left-color: #fafafa;
+    border-right-color: #455aa4;
+    border-bottom-color: #455aa4;
+    overflow: hidden;
+    position: relative;
+    -webkit-box-shadow: 0px 0.5rem 0.5rem 0px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 0.5rem 0.5rem 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0.5rem 0.5rem 0px rgba(0, 0, 0, 0.2); }
+  .header-blog__profile:hover .header-blog__overlay {
+    opacity: 1; }
+  .header-blog__profile:hover .header-blog__background {
+    transform: scale(1.2);
+    filter: blur(2px); }
+  .header-blog__background {
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+    background-image: url(../img/profile1.png);
+    background-size: cover;
+    background-position: center;
+    transition: all .3s ease-in-out; }
+  .header-blog__overlay {
+    opacity: 0;
+    transition: all .3s ease-in-out;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); }
+  .header-blog__name {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    transform: translateY(-50%);
+    color: #fff;
+    font-size: 1.6rem;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase; }
+  .header-blog__heading {
+    color: #455aa4;
+    margin-left: 2rem;
+    position: relative; }
+    .header-blog__heading span {
+      color: #7bbce8; }
+
+.layout-blog {
+  padding: 5rem 0; }
+  .layout-blog__container {
+    display: grid;
+    grid-template-columns: 8fr 4fr;
+    grid-template-rows: max-content auto;
+    column-gap: 5rem;
+    row-gap: 5rem; }
+    @media only screen and (max-width: 67em) {
+      .layout-blog__container {
+        grid-template-columns: 7fr 5fr; } }
+    @media only screen and (max-width: 46.875em) {
+      .layout-blog__container {
+        grid-template-columns: 100%; } }
+  .layout-blog__tab {
+    background-color: #fafafa;
+    padding: 1rem 2rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center; }
+    .layout-blog__tab--posts {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2; }
+    .layout-blog__tab--visited {
+      grid-column: 2 / 3;
+      grid-row: 1 / 2; }
+      @media only screen and (max-width: 46.875em) {
+        .layout-blog__tab--visited {
+          grid-column: 1 / 2;
+          grid-row: 3 / 4; } }
+  .layout-blog__heading {
+    flex: 1;
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 2rem;
+    color: #5a5a5a; }
+  .layout-blog__posts {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    display: grid;
+    grid-template-columns: 6fr 6fr;
+    column-gap: 5rem;
+    row-gap: 5rem; }
+    @media only screen and (max-width: 46.875em) {
+      .layout-blog__posts {
+        grid-row: 2 / 3; } }
+    @media only screen and (max-width: 67em) {
+      .layout-blog__posts {
+        grid-template-columns: 100%;
+        grid-template-rows: auto;
+        column-gap: 0; } }
+    .layout-blog__posts > * {
+      order: 1; }
+  .layout-blog__visited {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    display: flex;
+    flex-direction: column; }
+    @media only screen and (max-width: 46.875em) {
+      .layout-blog__visited {
+        grid-column: 1 / 2;
+        grid-row: 4 / 5; } }
+    .layout-blog__visited > *:not(:last-child) {
+      margin-bottom: 3rem; }
+    .layout-blog__visited > * {
+      order: 1; }
 
 .video-section {
   background-image: url(../img/noise-grey-400.png);
@@ -1346,18 +1627,73 @@ img.responsive {
       display: block;
       max-width: 50rem; }
 
-.features .heading-secondary {
+.features-section .heading-secondary {
   margin-bottom: 2rem; }
 
-.partners {
+.features-section__outline {
+  border-right: 0.2rem solid #f0f0f0;
+  border-bottom: 0.2rem solid #f0f0f0;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 100%;
+  align-items: stretch;
+  position: relative; }
+  @media only screen and (max-width: 56.25em) {
+    .features-section__outline {
+      border: none; }
+      .features-section__outline:not(:last-child) {
+        margin-bottom: 2rem; }
+        .features-section__outline:not(:last-child)::after {
+          content: "";
+          position: absolute;
+          top: calc(100% + 1.1rem);
+          left: 40%;
+          width: 20%;
+          height: 1px;
+          background-color: #7bbce8; } }
+  .features-section__outline::before {
+    content: "";
+    z-index: 20;
+    width: 100%;
+    height: 100%;
+    outline-width: 0rem;
+    outline-style: solid;
+    outline-color: #7bbce8;
+    transition: all .2s;
+    grid-area: 1 / 1 / 2 / 2; }
+  .features-section__outline p.paragraph {
+    padding: 2.5rem;
+    z-index: 30;
+    grid-area: 1 / 1 / 2 / 2;
+    color: #5a5a5a; }
+  .features-section__outline:hover {
+    border-color: transparent; }
+    .features-section__outline:hover::before {
+      outline-width: 1rem; }
+    .features-section__outline:hover p.paragraph {
+      color: #3c3c3c; }
+
+.partners-section {
   background-image: url(../img/noise-grey-400.png);
   background-repeat: repeat;
   position: relative; }
-  .partners__container {
+  .partners-section__images img {
+    margin-bottom: 3rem; }
+    @media only screen and (max-width: 56.25em) {
+      .partners-section__images img {
+        margin-bottom: 0; } }
+  @media only screen and (max-width: 56.25em) {
+    .partners-section__images {
+      margin-top: 2rem;
+      display: grid;
+      grid-template-columns: 6fr 6fr;
+      column-gap: 2rem;
+      align-items: center; } }
+  .partners-section__container {
     display: flex;
     align-items: center;
     justify-content: center; }
-  .partners__text {
+  .partners-section__text {
     display: block;
     text-align: center;
     max-width: 70rem; }
